Entrega6/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC
Rule 2     auxprogramvars -> vars auxprogramvars
Rule 3     auxprogramvars -> empty
Rule 4     auxprogramfunct -> function auxprogramfunct
Rule 5     auxprogramfunct -> empty
Rule 6     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 7     arrayvals -> LFTBRACSQR arrayvalsaux RGTBRACSQR
Rule 8     arrayvalsaux -> constant
Rule 9     arrayvalsaux -> constant COMMA arrayvalsaux
Rule 10    assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 11    assignmentaux -> ID
Rule 12    assignmentaux -> array
Rule 13    blockreturn -> LFTBRAC blockneutral RGTBRAC
Rule 14    blockreturn -> LFTBRAC blockneutral RETURN exp codeReturnQuad SEMICOLON RGTBRAC
Rule 15    blockneutral -> statement blockneutral
Rule 16    blockneutral -> vars blockneutral
Rule 17    blockneutral -> empty
Rule 18    block -> LFTBRAC blockneutral RGTBRAC
Rule 19    condition -> IF conditionaux codeEndIf
Rule 20    condition -> IF conditionaux ELSE codeElse block codeEndIf
Rule 21    conditionaux -> LFTPAREN expression RGTPAREN codeGOTOF block conditionaux2
Rule 22    conditionaux2 -> codeNextIf ELSEIF conditionaux
Rule 23    conditionaux2 -> empty
Rule 24    constant -> ID
Rule 25    constant -> array
Rule 26    constant -> cteN
Rule 27    constant -> cteS
Rule 28    constant -> TRUE codeAddConstBool
Rule 29    constant -> FALSE codeAddConstBool
Rule 30    constant -> call codeIsCalll
Rule 31    cteN -> FLOAT codeAddConstNumber
Rule 32    cteN -> INT codeAddConstNumber
Rule 33    cteS -> STRING codeAddConstString
Rule 34    exp -> term
Rule 35    exp -> term PLUS codeAddOperator exp
Rule 36    exp -> term MINUS codeAddOperator exp
Rule 37    factoraux -> constant
Rule 38    factoraux -> PLUS constant
Rule 39    factoraux -> MINUS constant
Rule 40    factor -> LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
Rule 41    factor -> factoraux codeAskFactor
Rule 42    expression -> exp
Rule 43    expression -> exp expressionaux codeAddOperator exp codeAskExpression
Rule 44    expressionaux -> AND
Rule 45    expressionaux -> DOUBEQUAL
Rule 46    expressionaux -> NOT
Rule 47    expressionaux -> OR
Rule 48    expressionaux -> LESSTHANEQUAL
Rule 49    expressionaux -> GREATTHANEQUAL
Rule 50    expressionaux -> GREATTHAN
Rule 51    expressionaux -> LESSTHAN
Rule 52    loop -> WHILE codeWhileCondition LFTPAREN expression RGTPAREN codeGOTOF block codeGOTOWhile
Rule 53    write -> PRINT LFTPAREN constant RGTPAREN SEMICOLON
Rule 54    parameter -> type codeCheckType ID codeAddParameters
Rule 55    parameter -> type codeCheckType ID codeAddParameters COMMA parameter
Rule 56    parameter -> empty
Rule 57    term -> factor MULTIPLICATION codeAddOperator term
Rule 58    term -> factor DIVISION codeAddOperator term
Rule 59    term -> factor codeAskTerm
Rule 60    statement -> assignment
Rule 61    statement -> condition
Rule 62    statement -> loop
Rule 63    statement -> write
Rule 64    statement -> read
Rule 65    statement -> call SEMICOLON
Rule 66    type -> INT
Rule 67    type -> FLOAT
Rule 68    type -> CHAR
Rule 69    type -> BOOL
Rule 70    type -> STRING
Rule 71    main -> codeLocationMain PRIOMH codeScope block
Rule 72    function -> FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
Rule 73    functionaux -> VOID codeTypeVoid codeCheckType
Rule 74    functionaux -> codeFuncIndicator type codeCheckType
Rule 75    vars -> type codeCheckType varsaux
Rule 76    varsaux2 -> COMMA varsaux
Rule 77    varsaux2 -> SEMICOLON
Rule 78    varsaux -> ID codeAddVar EQUAL expression varsaux2
Rule 79    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2
Rule 80    callaux -> codeMovePointer COMMA exp codeAddArguments callaux
Rule 81    callaux -> empty
Rule 82    call -> ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn
Rule 83    read -> READ LFTPAREN readaux RGTPAREN SEMICOLON
Rule 84    readaux -> ID
Rule 85    readaux -> array
Rule 86    empty -> <empty>
Rule 87    codeTempReturn -> empty
Rule 88    codeIsCalll -> empty
Rule 89    codeGOSUB -> empty
Rule 90    codeVerifyNull -> empty
Rule 91    codeVerifyNull2 -> empty
Rule 92    codeMovePointer -> empty
Rule 93    codeAddArguments -> empty
Rule 94    codeEraQuad -> empty
Rule 95    codeVerifyFunct -> empty
Rule 96    codeReturnQuad -> <empty>
Rule 97    codeAddFunctQuad -> <empty>
Rule 98    codeLocationMain -> <empty>
Rule 99    codeGOTOMain -> <empty>
Rule 100   codeElse -> <empty>
Rule 101   codeEndIf -> <empty>
Rule 102   codeNextIf -> <empty>
Rule 103   codeGOTOF -> <empty>
Rule 104   codeGOTOWhile -> <empty>
Rule 105   codeWhileCondition -> <empty>
Rule 106   codeScope -> <empty>
Rule 107   codeCheckType -> <empty>
Rule 108   codeAddVar -> <empty>
Rule 109   codeAddVarArreglo -> <empty>
Rule 110   codeAddParameters -> <empty>
Rule 111   codeNameOfFunct -> <empty>
Rule 112   codeTypeVoid -> <empty>
Rule 113   codeFuncIndicator -> <empty>
Rule 114   codeDeleteOpenParen -> empty
Rule 115   codeAddOpenParen -> empty
Rule 116   codeAddConstBool -> empty
Rule 117   codeAddConstString -> empty
Rule 118   codeAddConstNumber -> empty
Rule 119   codeAddOperator -> empty
Rule 120   codeAskTerm -> empty
Rule 121   codeAskFactor -> empty
Rule 122   codeAskExpression -> empty

Terminals, with rules where they appear

AND                  : 44
BOOL                 : 69
CHAR                 : 68
COMMA                : 9 55 76 80
DIVISION             : 58
DOUBEQUAL            : 45
ELSE                 : 20
ELSEIF               : 22
EQUAL                : 10 78 79
FALSE                : 29
FLOAT                : 31 67
FUNCTION             : 72
GREATTHAN            : 50
GREATTHANEQUAL       : 49
ID                   : 1 6 11 24 54 55 72 78 79 82 84
IF                   : 19 20
INT                  : 32 66 79
LESSTHAN             : 51
LESSTHANEQUAL        : 48
LFTBRAC              : 1 13 14 18
LFTBRACSQR           : 6 7 79
LFTPAREN             : 21 40 52 53 72 82 83
MINUS                : 36 39
MULTIPLICATION       : 57
NOT                  : 46
OR                   : 47
PLUS                 : 35 38
PRINT                : 53
PRIOMH               : 71
PROGRAM              : 1
READ                 : 83
RETURN               : 14
RGTBRAC              : 1 13 14 18
RGTBRACSQR           : 6 7 79
RGTPAREN             : 21 40 52 53 72 82 83
SEMICOLON            : 10 14 53 65 77 83
STRING               : 33 70
TRUE                 : 28
VOID                 : 73
WHILE                : 52
error                : 

Nonterminals, with rules where they appear

array                : 12 25 85
arrayvals            : 79
arrayvalsaux         : 7 9
assignment           : 60
assignmentaux        : 10
auxprogramfunct      : 1 4
auxprogramvars       : 1 2
block                : 20 21 52 71
blockneutral         : 13 14 15 16 18
blockreturn          : 72
call                 : 30 65
callaux              : 80 82
codeAddArguments     : 80 82
codeAddConstBool     : 28 29
codeAddConstNumber   : 31 32
codeAddConstString   : 33
codeAddFunctQuad     : 72
codeAddOpenParen     : 40
codeAddOperator      : 35 36 43 57 58
codeAddParameters    : 54 55
codeAddVar           : 78
codeAddVarArreglo    : 79
codeAskExpression    : 43
codeAskFactor        : 40 41
codeAskTerm          : 59
codeCheckType        : 54 55 73 74 75
codeDeleteOpenParen  : 40
codeElse             : 20
codeEndIf            : 19 20
codeEraQuad          : 82
codeFuncIndicator    : 74
codeGOSUB            : 82
codeGOTOF            : 21 52
codeGOTOMain         : 1
codeGOTOWhile        : 52
codeIsCalll          : 30
codeLocationMain     : 71
codeMovePointer      : 80
codeNameOfFunct      : 72
codeNextIf           : 22
codeReturnQuad       : 14
codeScope            : 71 72 72
codeTempReturn       : 82
codeTypeVoid         : 73
codeVerifyFunct      : 82
codeVerifyNull       : 82
codeVerifyNull2      : 
codeWhileCondition   : 52
condition            : 61
conditionaux         : 19 20 22
conditionaux2        : 21
constant             : 8 9 37 38 39 53
cteN                 : 26
cteS                 : 27
empty                : 3 5 17 23 56 81 87 88 89 90 91 92 93 94 95 114 115 116 117 118 119 120 121 122
exp                  : 6 14 35 36 42 43 43 80 82
expression           : 10 21 40 52 78
expressionaux        : 43
factor               : 57 58 59
factoraux            : 41
function             : 4
functionaux          : 72
loop                 : 62
main                 : 1
parameter            : 55 72
program              : 0
read                 : 64
readaux              : 83
statement            : 15
term                 : 34 35 36 57 58
type                 : 54 55 74 75
vars                 : 2 16
varsaux              : 75 76
varsaux2             : 78 79
write                : 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC
    (2) auxprogramvars -> . vars auxprogramvars
    (3) auxprogramvars -> . empty
    (75) vars -> . type codeCheckType varsaux
    (86) empty -> .
    (66) type -> . INT
    (67) type -> . FLOAT
    (68) type -> . CHAR
    (69) type -> . BOOL
    (70) type -> . STRING

    FUNCTION        reduce using rule 86 (empty -> .)
    PRIOMH          reduce using rule 86 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    auxprogramvars                 shift and go to state 5
    vars                           shift and go to state 6
    type                           shift and go to state 12
    empty                          shift and go to state 13

state 5

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars . codeGOTOMain auxprogramfunct main RGTBRAC
    (99) codeGOTOMain -> .

    FUNCTION        reduce using rule 99 (codeGOTOMain -> .)
    PRIOMH          reduce using rule 99 (codeGOTOMain -> .)

    codeGOTOMain                   shift and go to state 14

state 6

    (2) auxprogramvars -> vars . auxprogramvars
    (2) auxprogramvars -> . vars auxprogramvars
    (3) auxprogramvars -> . empty
    (75) vars -> . type codeCheckType varsaux
    (86) empty -> .
    (66) type -> . INT
    (67) type -> . FLOAT
    (68) type -> . CHAR
    (69) type -> . BOOL
    (70) type -> . STRING

    FUNCTION        reduce using rule 86 (empty -> .)
    PRIOMH          reduce using rule 86 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    vars                           shift and go to state 6
    auxprogramvars                 shift and go to state 15
    type                           shift and go to state 12
    empty                          shift and go to state 13

state 7

    (67) type -> FLOAT .

    ID              reduce using rule 67 (type -> FLOAT .)


state 8

    (66) type -> INT .

    ID              reduce using rule 66 (type -> INT .)


state 9

    (68) type -> CHAR .

    ID              reduce using rule 68 (type -> CHAR .)


state 10

    (69) type -> BOOL .

    ID              reduce using rule 69 (type -> BOOL .)


state 11

    (70) type -> STRING .

    ID              reduce using rule 70 (type -> STRING .)


state 12

    (75) vars -> type . codeCheckType varsaux
    (107) codeCheckType -> .

    ID              reduce using rule 107 (codeCheckType -> .)

    codeCheckType                  shift and go to state 16

state 13

    (3) auxprogramvars -> empty .

    FUNCTION        reduce using rule 3 (auxprogramvars -> empty .)
    PRIOMH          reduce using rule 3 (auxprogramvars -> empty .)


state 14

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain . auxprogramfunct main RGTBRAC
    (4) auxprogramfunct -> . function auxprogramfunct
    (5) auxprogramfunct -> . empty
    (72) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (86) empty -> .

    FUNCTION        shift and go to state 18
    PRIOMH          reduce using rule 86 (empty -> .)

    function                       shift and go to state 17
    auxprogramfunct                shift and go to state 19
    empty                          shift and go to state 20

state 15

    (2) auxprogramvars -> vars auxprogramvars .

    FUNCTION        reduce using rule 2 (auxprogramvars -> vars auxprogramvars .)
    PRIOMH          reduce using rule 2 (auxprogramvars -> vars auxprogramvars .)


state 16

    (75) vars -> type codeCheckType . varsaux
    (78) varsaux -> . ID codeAddVar EQUAL expression varsaux2
    (79) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2

    ID              shift and go to state 21

    varsaux                        shift and go to state 22

state 17

    (4) auxprogramfunct -> function . auxprogramfunct
    (4) auxprogramfunct -> . function auxprogramfunct
    (5) auxprogramfunct -> . empty
    (72) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (86) empty -> .

    FUNCTION        shift and go to state 18
    PRIOMH          reduce using rule 86 (empty -> .)

    function                       shift and go to state 17
    auxprogramfunct                shift and go to state 23
    empty                          shift and go to state 20

state 18

    (72) function -> FUNCTION . codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (106) codeScope -> .

    VOID            reduce using rule 106 (codeScope -> .)
    INT             reduce using rule 106 (codeScope -> .)
    FLOAT           reduce using rule 106 (codeScope -> .)
    CHAR            reduce using rule 106 (codeScope -> .)
    BOOL            reduce using rule 106 (codeScope -> .)
    STRING          reduce using rule 106 (codeScope -> .)

    codeScope                      shift and go to state 24

state 19

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct . main RGTBRAC
    (71) main -> . codeLocationMain PRIOMH codeScope block
    (98) codeLocationMain -> .

    PRIOMH          reduce using rule 98 (codeLocationMain -> .)

    codeLocationMain               shift and go to state 26
    main                           shift and go to state 25

state 20

    (5) auxprogramfunct -> empty .

    PRIOMH          reduce using rule 5 (auxprogramfunct -> empty .)


state 21

    (78) varsaux -> ID . codeAddVar EQUAL expression varsaux2
    (79) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2
    (108) codeAddVar -> .
    (109) codeAddVarArreglo -> .

    EQUAL           reduce using rule 108 (codeAddVar -> .)
    LFTBRACSQR      reduce using rule 109 (codeAddVarArreglo -> .)

    codeAddVar                     shift and go to state 28
    codeAddVarArreglo              shift and go to state 27

state 22

    (75) vars -> type codeCheckType varsaux .

    IF              reduce using rule 75 (vars -> type codeCheckType varsaux .)
    WHILE           reduce using rule 75 (vars -> type codeCheckType varsaux .)
    PRINT           reduce using rule 75 (vars -> type codeCheckType varsaux .)
    READ            reduce using rule 75 (vars -> type codeCheckType varsaux .)
    ID              reduce using rule 75 (vars -> type codeCheckType varsaux .)
    INT             reduce using rule 75 (vars -> type codeCheckType varsaux .)
    FLOAT           reduce using rule 75 (vars -> type codeCheckType varsaux .)
    CHAR            reduce using rule 75 (vars -> type codeCheckType varsaux .)
    BOOL            reduce using rule 75 (vars -> type codeCheckType varsaux .)
    STRING          reduce using rule 75 (vars -> type codeCheckType varsaux .)
    RGTBRAC         reduce using rule 75 (vars -> type codeCheckType varsaux .)
    RETURN          reduce using rule 75 (vars -> type codeCheckType varsaux .)
    FUNCTION        reduce using rule 75 (vars -> type codeCheckType varsaux .)
    PRIOMH          reduce using rule 75 (vars -> type codeCheckType varsaux .)


state 23

    (4) auxprogramfunct -> function auxprogramfunct .

    PRIOMH          reduce using rule 4 (auxprogramfunct -> function auxprogramfunct .)


state 24

    (72) function -> FUNCTION codeScope . functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (73) functionaux -> . VOID codeTypeVoid codeCheckType
    (74) functionaux -> . codeFuncIndicator type codeCheckType
    (113) codeFuncIndicator -> .

    VOID            shift and go to state 31
    INT             reduce using rule 113 (codeFuncIndicator -> .)
    FLOAT           reduce using rule 113 (codeFuncIndicator -> .)
    CHAR            reduce using rule 113 (codeFuncIndicator -> .)
    BOOL            reduce using rule 113 (codeFuncIndicator -> .)
    STRING          reduce using rule 113 (codeFuncIndicator -> .)

    functionaux                    shift and go to state 29
    codeFuncIndicator              shift and go to state 30

state 25

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main . RGTBRAC

    RGTBRAC         shift and go to state 32


state 26

    (71) main -> codeLocationMain . PRIOMH codeScope block

    PRIOMH          shift and go to state 33


state 27

    (79) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvals varsaux2

    LFTBRACSQR      shift and go to state 34


state 28

    (78) varsaux -> ID codeAddVar . EQUAL expression varsaux2

    EQUAL           shift and go to state 35


state 29

    (72) function -> FUNCTION codeScope functionaux . ID codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope

    ID              shift and go to state 36


state 30

    (74) functionaux -> codeFuncIndicator . type codeCheckType
    (66) type -> . INT
    (67) type -> . FLOAT
    (68) type -> . CHAR
    (69) type -> . BOOL
    (70) type -> . STRING

    INT             shift and go to state 8
    FLOAT           shift and go to state 7
    CHAR            shift and go to state 9
    BOOL            shift and go to state 10
    STRING          shift and go to state 11

    type                           shift and go to state 37

state 31

    (73) functionaux -> VOID . codeTypeVoid codeCheckType
    (112) codeTypeVoid -> .

    ID              reduce using rule 112 (codeTypeVoid -> .)

    codeTypeVoid                   shift and go to state 38

state 32

    (1) program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogramvars codeGOTOMain auxprogramfunct main RGTBRAC .)


state 33

    (71) main -> codeLocationMain PRIOMH . codeScope block
    (106) codeScope -> .

    LFTBRAC         reduce using rule 106 (codeScope -> .)

    codeScope                      shift and go to state 39

state 34

    (79) varsaux -> ID codeAddVarArreglo LFTBRACSQR . INT RGTBRACSQR EQUAL arrayvals varsaux2

    INT             shift and go to state 40


state 35

    (78) varsaux -> ID codeAddVar EQUAL . expression varsaux2
    (42) expression -> . exp
    (43) expression -> . exp expressionaux codeAddOperator exp codeAskExpression
    (34) exp -> . term
    (35) exp -> . term PLUS codeAddOperator exp
    (36) exp -> . term MINUS codeAddOperator exp
    (57) term -> . factor MULTIPLICATION codeAddOperator term
    (58) term -> . factor DIVISION codeAddOperator term
    (59) term -> . factor codeAskTerm
    (40) factor -> . LFTPAREN codeAddOpenParen expression RGTPAREN codeDeleteOpenParen codeAskFactor
    (41) factor -> . factoraux codeAskFactor
    (37) factoraux -> . constant
    (38) factoraux -> . PLUS constant
    (39) factoraux -> . MINUS constant
    (24) constant -> . ID
    (25) constant -> . array
    (26) constant -> . cteN
    (27) constant -> . cteS
    (28) constant -> . TRUE codeAddConstBool
    (29) constant -> . FALSE codeAddConstBool
    (30) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (31) cteN -> . FLOAT codeAddConstNumber
    (32) cteN -> . INT codeAddConstNumber
    (33) cteS -> . STRING codeAddConstString
    (82) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    LFTPAREN        shift and go to state 52
    PLUS            shift and go to state 47
    MINUS           shift and go to state 45
    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 41
    factoraux                      shift and go to state 42
    array                          shift and go to state 43
    cteN                           shift and go to state 44
    call                           shift and go to state 49
    factor                         shift and go to state 48
    term                           shift and go to state 54
    exp                            shift and go to state 58
    expression                     shift and go to state 59

state 36

    (72) function -> FUNCTION codeScope functionaux ID . codeNameOfFunct LFTPAREN parameter RGTPAREN codeAddFunctQuad blockreturn codeScope
    (111) codeNameOfFunct -> .

    LFTPAREN        reduce using rule 111 (codeNameOfFunct -> .)

    codeNameOfFunct                shift and go to state 60

state 37

    (74) functionaux -> codeFuncIndicator type . codeCheckType
    (107) codeCheckType -> .

    ID              reduce using rule 107 (codeCheckType -> .)

    codeCheckType                  shift and go to state 61

state 38

    (73) functionaux -> VOID codeTypeVoid . codeCheckType
    (107) codeCheckType -> .

    ID              reduce using rule 107 (codeCheckType -> .)

    codeCheckType                  shift and go to state 62

state 39

    (71) main -> codeLocationMain PRIOMH codeScope . block
    (18) block -> . LFTBRAC blockneutral RGTBRAC

    LFTBRAC         shift and go to state 63

    block                          shift and go to state 64

state 40

    (79) varsaux -> ID codeAddVarArreglo LFTBRACSQR INT . RGTBRACSQR EQUAL arrayvals varsaux2

    RGTBRACSQR      shift and go to state 65


state 41

    (37) factoraux -> constant .

    MULTIPLICATION  reduce using rule 37 (factoraux -> constant .)
    DIVISION        reduce using rule 37 (factoraux -> constant .)
    PLUS            reduce using rule 37 (factoraux -> constant .)
    MINUS           reduce using rule 37 (factoraux -> constant .)
    COMMA           reduce using rule 37 (factoraux -> constant .)
    RGTPAREN        reduce using rule 37 (factoraux -> constant .)
    AND             reduce using rule 37 (factoraux -> constant .)
    DOUBEQUAL       reduce using rule 37 (factoraux -> constant .)
    NOT             reduce using rule 37 (factoraux -> constant .)
    OR              reduce using rule 37 (factoraux -> constant .)
    LESSTHANEQUAL   reduce using rule 37 (factoraux -> constant .)
    GREATTHANEQUAL  reduce using rule 37 (factoraux -> constant .)
    GREATTHAN       reduce using rule 37 (factoraux -> constant .)
    LESSTHAN        reduce using rule 37 (factoraux -> constant .)
    SEMICOLON       reduce using rule 37 (factoraux -> constant .)
    RGTBRACSQR      reduce using rule 37 (factoraux -> constant .)


state 42

    (41) factor -> factoraux . codeAskFactor
    (121) codeAskFactor -> . empty
    (86) empty -> .

    MULTIPLICATION  reduce using rule 86 (empty -> .)
    DIVISION        reduce using rule 86 (empty -> .)
    PLUS            reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    AND             reduce using rule 86 (empty -> .)
    DOUBEQUAL       reduce using rule 86 (empty -> .)
    NOT             reduce using rule 86 (empty -> .)
    OR              reduce using rule 86 (empty -> .)
    LESSTHANEQUAL   reduce using rule 86 (empty -> .)
    GREATTHANEQUAL  reduce using rule 86 (empty -> .)
    GREATTHAN       reduce using rule 86 (empty -> .)
    LESSTHAN        reduce using rule 86 (empty -> .)
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    RGTPAREN        reduce using rule 86 (empty -> .)
    RGTBRACSQR      reduce using rule 86 (empty -> .)

    codeAskFactor                  shift and go to state 66
    empty                          shift and go to state 67

state 43

    (25) constant -> array .

    MULTIPLICATION  reduce using rule 25 (constant -> array .)
    DIVISION        reduce using rule 25 (constant -> array .)
    PLUS            reduce using rule 25 (constant -> array .)
    MINUS           reduce using rule 25 (constant -> array .)
    AND             reduce using rule 25 (constant -> array .)
    DOUBEQUAL       reduce using rule 25 (constant -> array .)
    NOT             reduce using rule 25 (constant -> array .)
    OR              reduce using rule 25 (constant -> array .)
    LESSTHANEQUAL   reduce using rule 25 (constant -> array .)
    GREATTHANEQUAL  reduce using rule 25 (constant -> array .)
    GREATTHAN       reduce using rule 25 (constant -> array .)
    LESSTHAN        reduce using rule 25 (constant -> array .)
    RGTPAREN        reduce using rule 25 (constant -> array .)
    COMMA           reduce using rule 25 (constant -> array .)
    SEMICOLON       reduce using rule 25 (constant -> array .)
    RGTBRACSQR      reduce using rule 25 (constant -> array .)


state 44

    (26) constant -> cteN .

    MULTIPLICATION  reduce using rule 26 (constant -> cteN .)
    DIVISION        reduce using rule 26 (constant -> cteN .)
    PLUS            reduce using rule 26 (constant -> cteN .)
    MINUS           reduce using rule 26 (constant -> cteN .)
    AND             reduce using rule 26 (constant -> cteN .)
    DOUBEQUAL       reduce using rule 26 (constant -> cteN .)
    NOT             reduce using rule 26 (constant -> cteN .)
    OR              reduce using rule 26 (constant -> cteN .)
    LESSTHANEQUAL   reduce using rule 26 (constant -> cteN .)
    GREATTHANEQUAL  reduce using rule 26 (constant -> cteN .)
    GREATTHAN       reduce using rule 26 (constant -> cteN .)
    LESSTHAN        reduce using rule 26 (constant -> cteN .)
    RGTPAREN        reduce using rule 26 (constant -> cteN .)
    COMMA           reduce using rule 26 (constant -> cteN .)
    SEMICOLON       reduce using rule 26 (constant -> cteN .)
    RGTBRACSQR      reduce using rule 26 (constant -> cteN .)


state 45

    (39) factoraux -> MINUS . constant
    (24) constant -> . ID
    (25) constant -> . array
    (26) constant -> . cteN
    (27) constant -> . cteS
    (28) constant -> . TRUE codeAddConstBool
    (29) constant -> . FALSE codeAddConstBool
    (30) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (31) cteN -> . FLOAT codeAddConstNumber
    (32) cteN -> . INT codeAddConstNumber
    (33) cteS -> . STRING codeAddConstString
    (82) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 68
    call                           shift and go to state 49
    array                          shift and go to state 43
    cteN                           shift and go to state 44

state 46

    (28) constant -> TRUE . codeAddConstBool
    (116) codeAddConstBool -> . empty
    (86) empty -> .

    MULTIPLICATION  reduce using rule 86 (empty -> .)
    DIVISION        reduce using rule 86 (empty -> .)
    PLUS            reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    AND             reduce using rule 86 (empty -> .)
    DOUBEQUAL       reduce using rule 86 (empty -> .)
    NOT             reduce using rule 86 (empty -> .)
    OR              reduce using rule 86 (empty -> .)
    LESSTHANEQUAL   reduce using rule 86 (empty -> .)
    GREATTHANEQUAL  reduce using rule 86 (empty -> .)
    GREATTHAN       reduce using rule 86 (empty -> .)
    LESSTHAN        reduce using rule 86 (empty -> .)
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    RGTPAREN        reduce using rule 86 (empty -> .)
    RGTBRACSQR      reduce using rule 86 (empty -> .)

    codeAddConstBool               shift and go to state 69
    empty                          shift and go to state 70

state 47

    (38) factoraux -> PLUS . constant
    (24) constant -> . ID
    (25) constant -> . array
    (26) constant -> . cteN
    (27) constant -> . cteS
    (28) constant -> . TRUE codeAddConstBool
    (29) constant -> . FALSE codeAddConstBool
    (30) constant -> . call codeIsCalll
    (6) array -> . ID LFTBRACSQR exp RGTBRACSQR
    (31) cteN -> . FLOAT codeAddConstNumber
    (32) cteN -> . INT codeAddConstNumber
    (33) cteS -> . STRING codeAddConstString
    (82) call -> . ID codeVerifyFunct LFTPAREN codeEraQuad exp codeAddArguments callaux RGTPAREN codeVerifyNull codeGOSUB codeTempReturn

    ID              shift and go to state 53
    TRUE            shift and go to state 46
    FALSE           shift and go to state 55
    FLOAT           shift and go to state 57
    INT             shift and go to state 56
    STRING          shift and go to state 50

    cteS                           shift and go to state 51
    constant                       shift and go to state 71
    call                           shift and go to state 49
    array                          shift and go to state 43
    cteN                           shift and go to state 44

state 48

    (57) term -> factor . MULTIPLICATION codeAddOperator term
    (58) term -> factor . DIVISION codeAddOperator term
    (59) term -> factor . codeAskTerm
    (120) codeAskTerm -> . empty
    (86) empty -> .

    MULTIPLICATION  shift and go to state 74
    DIVISION        shift and go to state 72
    PLUS            reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    AND             reduce using rule 86 (empty -> .)
    DOUBEQUAL       reduce using rule 86 (empty -> .)
    NOT             reduce using rule 86 (empty -> .)
    OR              reduce using rule 86 (empty -> .)
    LESSTHANEQUAL   reduce using rule 86 (empty -> .)
    GREATTHANEQUAL  reduce using rule 86 (empty -> .)
    GREATTHAN       reduce using rule 86 (empty -> .)
    LESSTHAN        reduce using rule 86 (empty -> .)
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    RGTPAREN        reduce using rule 86 (empty -> .)
    RGTBRACSQR      reduce using rule 86 (empty -> .)

    codeAskTerm                    shift and go to state 73
    empty                          shift and go to state 75

state 49

    (30) constant -> call . codeIsCalll
    (88) codeIsCalll -> . empty
    (86) empty -> .
